# real-time-spi-on-xenomai-3

./: CMakeLists.txt  Makefile  README.md  main.c  spi.c  spi.h
